v1.1 Massive fix, introduced create_date_local for true media dates instead of user timezone based create_date + Fixed alignment of loading icons

--- a/src/App.css
+++ b/src/App.css
@@ -908,6 +908,8 @@ select:disabled {
       align-content: center;
       margin: 0 auto;
       font-size: 20px;
+      height: calc(100% - 23px);
+      width: 100%;
     }
     
     .theme-buttons {
